# atprog

./: .gitignore  CMakeLists.txt  README.txt  board.h  consts.h  main.cpp  readme.md  snake.cpp  snake.h  utils.cpp  utils.h
FlappyBird/: CMakeLists.txt  pillaritem.cpp  pillaritem.h  resource.qrc  scene.cpp  scene.h  widget.cpp  widget.h  widget.ui
Google_tests/: CMakeLists.txt  SolversTests.cpp  UtilsTests.cpp
src/: Board.cpp  Board.h  CMakeLists.txt  Solver.cpp  Solver.h  Utils.cpp  Utils.h
src/Solvers/: BacktrackingSolver.cpp  BacktrackingSolver.h  GeneticSolver.cpp  GeneticSolver.h  MinConflictsSolver.cpp  MinConflictsSolver.h  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h
